# vibe-island

./: .gitignore  .impeccable.md  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/superpowers/plans/: 2026-04-10-bridge-and-hooks.md
src/: App.test.tsx  App.tsx  styles.css
src-bridge/: Cargo.toml
src-bridge/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/claude/: mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/terminal/: mod.rs
src/hooks/: useIPC.test.ts  useIPC.ts
src/types/: index.test.ts  index.ts
